# name_sorting

./: .gitignore  CMakeLists.txt  README.mkd  package.xml
include/name_sorting/: name_sorting.h  name_sorting.hpp  sort_trajectories.h  sort_trajectories.hpp  sort_trajectories.hpp.autosave
src/name_sorting/: name_sorting.cpp  sort_trajectories.cpp
