<?xml version="1.0"?>
<package format="3">
  <name>name_sorting</name>
  <version>0.0.0</version>
  <description>The name_sorting package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>

  <export>
  </export>
</package>

